# phenix-sw

./: Dockerfile  odbc.ini
event_gen/src/PHHijing/: .cvsignore  ConfigParser.h  Makefile.am  PHGenerator.h  PHHijing.C  PHHijing.h  PHHijingHeader.C  PHHijingHeader.h  PHHijingHeaderLinkDef.h  PHHijingHeaderV1.C  PHHijingHeaderV1.h  PHHijingHeaderV1LinkDef.h  PHHijingHeaderV2.C  PHHijingHeaderV2.h  PHHijingHeaderV2LinkDef.h  PHHijingHeaderV3.C  PHHijingHeaderV3.h  PHHijingHeaderV3LinkDef.h  PHHijingHeaderV4.C  PHHijingHeaderV4.h  PHHijingHeaderV4LinkDef.h  PHHijingLinkDef.h  PHHijingOscarOutputManager.C  PHHijingOscarOutputManager.h  PHHijingOscarOutputManagerLinkDef.h  README  THijing.C  THijing.h  THijingLinkDef.h  configure.ac  event.inc  hijing1_37.f  hijing_init.f  hijing_main.f  hijingpar.h  hijingpar.inc  hijingpisa.f  hijingranf.f  hijingseed.f  himain.inc  (+3 more)
event_gen/src/PHParticleGen/: .cvsignore  Makefile.am  PHFvtxTrigger.C  PHFvtxTrigger.h  PHFvtxTriggerLinkDef.h  PHParticleGen.C  PHParticleGen.h  PHParticleGenLinkDef.h  README.TXT  TSingleParticleGenerator.C  TSingleParticleGenerator.h  TSingleParticleGeneratorLinkDef.h  TStarlightGenerator.C  TStarlightGenerator.h  TStarlightGeneratorLinkDef.h  configure.in
generators/flowAfterburner/: Makefile.am  configure.ac  flowAfterburner.C  flowAfterburner.h  test.xml
offline/AnalysisTrain/Run16dAuPi0Photon/: Combination.cc  Combination.h  Diagnostic.h  HotDeadTower.h  KCluster.cc  KCluster.h  KEvent.cc  KEvent.h  KEventCent.cc  KEventCent.h  KTofCutter.cc  KTofCutter.h  Makefile.am  RecalEMCalTOF.cc  RecalEMCalTOF.h  RecalWarnmap.cc  RecalWarnmap.h  Run15pp200WarnMap.list  Run16WMap.cc  Run16WMap.h  Run16dAuEmcalDeadMap.txt  Run16dAuPi0Photon.cc  Run16dAuPi0Photon.h  Run16dAuPi0PhotonLinkDef.h  SectorBySector.txt  TowerByTower.txt  WalkCorrection.txt  configure.in  dAu39_EmcalDeadmap.txt  dAu62_EmcalDeadmap.txt  deadmap_ERT.txt  deadmap_MB.txt  emCalibMaster.cxx  emCalibMaster.h  pAu15_deadmaps.txt  table1_TOF.txt  table1_TOF_dAu62.txt  table1_TOF_pp200.txt  table2_TOF.txt  table2_TOF_dAu62.txt  (+5 more)
offline/analysis/exodus/: AdjustDecaySum.cpp  AdjustDecaySum.h  ApplyCERESResolution.cpp  ApplyCERESResolution.h  ApplyPHENIXResolution.cpp  ApplyPHENIXResolution.h  ApplyPHENIXResolutionRun10.cpp  ApplyPHENIXResolutionRun10.h  ApplyResolution.cpp  ApplyResolution.h  BookROOTObjects.cpp  BookROOTObjects.h  Bremsstrahlung.cpp  Bremsstrahlung.h  CleanupRandom.cpp  CleanupRandom.h  CloseFullEventFile.cpp  CloseFullEventFile.h  CloseInputFile.cpp  CloseInputFile.h  CloseOutputFile.cpp  CloseOutputFile.h  CloseROOTFile.cpp  CloseROOTFile.h  CreateDalitzLeptonPairMass.cpp  CreateDalitzLeptonPairMass.h  DalitzDecay.cpp  DalitzDecay.h  DecayList.cpp  DecayList.h  DecayMachine.cpp  DecayMachine.h  DeclareROOTObjects.h  DefineDecayProperties.cpp  DefineDecayProperties.h  DefineParticleProperties.cpp  DefineParticleProperties.h  DoAllDecays.cpp  DoAllDecays.h  DoubleDalitzDecay.cpp  (+117 more)
offline/analysis/vernierScan/: Makefile.am  Vernier.cc  Vernier.h  VernierLinkDef.h  autogen.sh  configure.in
offline/framework/fun4all/: Fun4AllDstInputManager.C  Fun4AllDstInputManager.h  Fun4AllDstOutputManager.C  Fun4AllDstOutputManager.h  Fun4AllDummyInputManager.C  Fun4AllDummyInputManager.h  Fun4AllEventOutStream.C  Fun4AllEventOutStream.h  Fun4AllEventOutputManager.C  Fun4AllEventOutputManager.h  Fun4AllFileOutStream.C  Fun4AllFileOutStream.h  Fun4AllHistoManager.C  Fun4AllInputManager.C  Fun4AllInputManager.h  Fun4AllLinkDef.h  Fun4AllNoSyncDstInputManager.C  Fun4AllNoSyncDstInputManager.h  Fun4AllPrdfInputManager.C  Fun4AllPrdfOutputManager.C  Fun4AllPrdfOutputManager.h  Fun4AllReturnCodes.h  Fun4AllRolloverFileOutStream.C  Fun4AllServer.C  Fun4AllServer.h  Fun4AllSyncManager.C  Fun4AllUtils.cc  Makefile.am  PHFlag.C  PHFlag.h  RunNumberRanges.h  SubsysRecoStack.C  SubsysRecoStack.h  configure.ac  getClass.h  recoConsts.cc  recoConsts.h
offline/framework/phool/: Makefile.am  Makefile.in  PHBase_LinkDef.h  PHNodeIOManager.C  PHNodeIOManager.h  PHNodeReset.C  PHNodeReset.h  PHRawDataNode.h  PHRawOManager.C  PHRawOManager.h  configure  configure.in
offline/framework/phwrappers/: .cvsignore  Makefile.am  Makefile.in  PHTable.cc  PHTable.hh  PHTable_LinkDef.h  configure  configure.in  ds2Utils.cc  emlLib.h  macroDigest.pl  table_header.h
offline/framework/preco/: AccReco.C  AccReco.h  AccclusterReco.C  AccclusterReco.h  AllSysReco_centralLinkDef.h  AllSysReco_commonLinkDef.h  AllSysReco_muonsLinkDef.h  BbcReco.C  BbcReco.h  BeamShiftReco.C  BeamShiftReco.h  CentralityCalibrator.C  CentralityCalibrator.h  CentralityReco.C  CentralityReco.h  CentraltrackReco.C  CentraltrackReco.h  ChargedvetoReco.C  ChargedvetoReco.h  CrkReco.C  CrkReco.h  DchReco.C  DchReco.h  DchhistReco.C  DchhistReco.h  EmcAbsEScaleRecalReco.C  EmcAbsEScaleRecalReco.h  EmcDeadRecalReco.C  EmcDeadRecalReco.h  EmcRecalReco.C  EmcRecalReco.h  EmcReco3.C  EmcReco3.h  EmcSimTowerSmearer.C  EmcSimTowerSmearer.h  EmcT0RecalReco.C  EmcT0RecalReco.h  ErtReco.C  ErtReco.h  EventTypeSelect.C  (+59 more)
offline/framework/recal/: AccrecalReco.C  AccrecalReco.h  Bbcrecal.C  Bbcrecal.h  BunchCross.C  BunchCross.h  EmcPar.h  (+230 more)
online_distribution/newbasic/: A_Event.cc  A_Event.h  Cframe.C  Cframe.h  CframeV1.C  CframeV1.h  Cpacket.C  Cpacket.h  CpacketV1.C  CpacketV1.h  EvtStructures.h  Makefile.am  PHmd5Value.h  buffer.cc  buffer.h  changehitformat.cc  changeid.cc  changerun_time.cc  configure.in  dataBlockPublic.h  date_filter_msg_buffer.cc  date_filter_msg_buffer.h  ddump.cc  debugbuffer.cc  decoding_routines.h  dlist.cc  dpipe.cc  dpipe_filter.h  errorBlock.h  etEventiterator.cc  etEventiterator.h  eventLinkDef.h  event_io.h  eventcombiner.cc  evt_mnemonic.cc  fakeFrame.C  fakeFrame.h  fileEventiterator.cc  fileEventiterator.h  filedebugEventiterator.cc  (+280 more)
simulation/pisa2000/: .cvsignore  Makefile.am  configure.ac
utils/RDBC/: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  INSTALL.local  Makefile.am  NEWS  RDBC.spec.in  README  TODO  acconfig.h  acinclude.m4  autogen.sh  config.h.in  configure.in
(+2819 files in other folders)
