AC_INIT(Run16dAuPi0Photon,1.0)
AC_CONFIG_SRCDIR(configure.in)

AM_INIT_AUTOMAKE(ANADST, 1.00)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

dnl   no point in suppressing warnings people should 
dnl   at least see them, so here we go for g++: -Wall

PACKAGE_INCLUDE_DIR=AC_PACKAGE_NAME
AC_SUBST(PACKAGE_INCLUDE_DIR)

if test $ac_cv_prog_gxx = yes; then
  CXXFLAGS="$CXXFLAGS -Wall -Werror"
fi
dnl suppress errors by unused but set variables
if  test `g++ -dumpversion | gawk '{print $1>=4.8?"1":"0"}'` = 1; then
  CXXFLAGS="$CXXFLAGS -Wno-unused-but-set-variable"
fi

ROOTLIBS=`root-config --libs`
AC_SUBST(ROOTLIBS)

AC_OUTPUT(Makefile)

