AC_INIT(preco,[1.0])

AC_CONFIG_SRCDIR([configure.in])

AM_INIT_AUTOMAKE

LT_INIT([disable-static])

AC_PROG_CXX(CC g++)

dnl   no point in suppressing warnings people should
dnl   at least see them, so here we go for g++: -Wall
dnl   treat warnings as error: -Werror
if test $ac_cv_prog_gxx = yes; then
   CXXFLAGS="$CXXFLAGS -Wall -Werror"
fi

AC_OUTPUT(Makefile)
